patch on user's avatar added to swagger
