# server/src/modules/users/routes/users.routes.ts
@@ -11,9 +11,9 @@ const usersAvatarController = new UserAvatarController();
 
 const upload = multer(multerConfig);
 
-usersRouter.post("/", upload.single("avatar"), usersController.create);
-usersRouter.get("/:id", usersController.searchByTitle);
-usersRouter.get("/", usersController.usersList);
+usersRouter.post("/", upload.single("avatar"), usersController.create); //
+usersRouter.get("/:id", usersController.searchByTitle); //
+usersRouter.get("/", usersController.usersList); //
 usersRouter.patch(
   "/avatar",
   isAuthenticated,
